# face_app

./: .gitignore  CHANGELOG.md  TODO.md  copilot-instructions.md  pyproject.toml  readme.md  requirements.txt  run_face_poc.py
docs/: clustering-tuning-reference.md
docs/issues/: 2026_05_31_agglomerativeclustering_api_changed_between_scikit_lear.md  2026_05_31_face_thumbnail_paths_stored_as_absolute_paths_in_early_.md
docs/notes/: README.md  face-app-detector-threshold.md  face-app-poc-runtime.md
src/face_poc/: __init__.py  __main__.py  cli.py  clustering.py  config.py  corrections.py  corrections_db.py  discovery.py  identity.py  modeling.py  pipeline.py  reporting.py  review.py  webapp.py
src/face_poc/templates/: base.html  cluster_detail.html  cluster_index.html  image_detail.html  run_detail.html  runs_index.html
tests/: test_clustering.py  test_corrections.py  test_discovery.py  test_webapp.py
