[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "face-poc"
version = "0.2.0"
description = "Local face grouping POC for clustering the same person across images."
readme = "readme.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "insightface>=1.0.1",
  "jinja2>=3.1.0",
  "numpy>=2.0.0",
  "onnxruntime-gpu>=1.26.0",
  "opencv-python-headless>=4.13.0.92",
  "pillow>=10.0.0",
  "scikit-learn>=1.5.0",
  "uvicorn>=0.35.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.0",
  "pytest>=8.0.0",
]

[project.scripts]
face-poc = "face_poc.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
